--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/barber.css">
   <link rel="stylesheet" href="css/services.css">
   <link rel="stylesheet" href="css/cosmetics.css">
+  <link rel="stylesheet" href="css/stars.css">
 </head>
 
 <body>
@@ -328,17 +329,200 @@
           </div>
         </div>
       </div>
+      <div class="stars-page desc">
+        <div class="scroll_container">
+          <div class="container">
+          <div class="stars-page_content">
+            <div class="stars_container">
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star1.png" alt="">
+                </div>
+                <span class="name">Джон Малкович</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star2.png" alt="">
+                </div>
+                <span class="name">Олег Тиньков</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star3.png" alt="">
+                </div>
+                <span class="name">Сергей Шнуров</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star4.png" alt="">
+                </div>
+                <span class="name">Павел Деревянко</span>
+                <div class="about">актер</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star5.png" alt="">
+                </div>
+                <span class="name">Юрий Дудь</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star6.png" alt="">
+                </div>
+                <span class="name">Максим Брызгалин</span>
+                <div class="about">актер, шоумен, ведущий</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star7.png" alt="">
+                </div>
+                <span class="name">Антон Иванов</span>
+                <div class="about">Comedy Club</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star8.png" alt="">
+                </div>
+                <span class="name">Григорий Аветов</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star9.png" alt="">
+                </div>
+                <span class="name">Дюмин</span>
+                <div class="about">губернатор тулы</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star10.png" alt="">
+                </div>
+                <span class="name">Миха Мевля</span>
+                <div class="about">защитник зенита</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star11.png" alt="">
+                </div>
+                <span class="name">Каспийский груз</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star12.png" alt="">
+                </div>
+                <span class="name">ивангай</span>
+                <div class="about">видеоблогер</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star13.png" alt="">
+                </div>
+                <span class="name">Артем «лев» Левин</span>
+                <div class="about">российский тайбоксер и кикбоксер</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star14.png" alt="">
+                </div>
+                <span class="name">Дмитрий Портнягин</span>
+                <div class="about">бизнесс-блогер</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star15.png" alt="">
+                </div>
+                <span class="name">Фёдор Кудряшов</span>
+                <div class="about">защитник сборной россии</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star16.png" alt="">
+                </div>
+                <span class="name">Роман Юнусов</span>
+                <div class="about">сёстры зайцевы</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star17.png" alt="">
+                </div>
+                <span class="name">Оксимирон</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star18.png" alt="">
+                </div>
+                <span class="name">Крис Боссио</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star19.png" alt="">
+                </div>
+                <span class="name">фк арсенал Тула</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star20.png" alt="">
+                </div>
+                <span class="name">Кирилл Андреев</span>
+                <div class="about">иванушки</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star21.png" alt="">
+                </div>
+                <span class="name">Майло Эдвардс</span>
+                <div class="about">комик стендап</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star22.png" alt="">
+                </div>
+                <span class="name">Макс 100500</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star23.png" alt="">
+                </div>
+                <span class="name">Юрий Кузнецов</span>
+                <div class="about">блогер</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star24.png" alt="">
+                </div>
+                <span class="name">Стас Пьеха</span>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star25.png" alt="">
+                </div>
+                <span class="name">Сергей Матвиенко</span>
+                <div class="about">ведущий шоу импровизация тнт</div>
+              </div>
+              <div class="star_block">
+                <div class="img_section">
+                  <img src="img/stars/star26.png" alt="">
+                </div>
+                <span class="name">Павел Прилучный</span>
+                <div class="about">актер</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
     </div>
     <div class="backgrounds">
       <div class="bg_page start_bg"></div>
       <div class="bg_page barber_bg"></div>
       <div class="bg_page services_bg"></div>
       <div class="bg_page cosmetics_bg"></div>
+      <div class="bg_page stars_bg"></div>
     </div>
   </div>
   <!--Sripts-->
   <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="libs/slick-1.8.1/slick/slick.min.js"></script>
+  <script src="libs/jquery.nicescroll-3.7.6/jquery.nicescroll.min.js"></script>
   <script src="js/common.js"></script>
 </body>
 
