--- a/portfolio/Individual/app/index.html
+++ b/portfolio/Individual/app/index.html
@@ -69,7 +69,8 @@
     </header>
     <div class="pages">
       <div class="start-page desc">
-        <div class="container">
+        <div class="scroll_block">
+           <div class="container">
           <div class="start-page_content">
             <div class="info_block">
               <div class="place_block">
@@ -94,6 +95,7 @@
             <span class="slogan"><img src="img/slogan.png" alt=""></span>
             <span class="main_slogan">исключительно моё</span>
           </div>
+        </div>
         </div>
       </div>
       <div class="gallery-page desc">
@@ -176,7 +178,8 @@
         </div>
       </div>
       <div class="barbershops-page desc">
-        <div class="container">
+        <div class="scroll_block">
+          <div class="container">
           <div class="barbershops-page_content">
             <span class="title">барбершопы topgun <span>individual</span></span>
             <div class="barbershops_container">
@@ -237,9 +240,11 @@
             </div>
           </div>
         </div>
+        </div>
       </div>
       <div class="services-page desc">
-        <div class="container">
+        <div class="scroll_block">
+            <div class="container">
           <div class="services-page_content">
             <div class="page_title">
               <img src="img/services_title.png" alt="">
@@ -264,9 +269,11 @@
             </div>
           </div>
         </div>
+        </div>
       </div>
       <div class="cosmetics-page desc">
-        <div class="container">
+        <div class="scroll_block">
+           <div class="container">
           <div class="cosmetics-page_content">
             <div class="title_block">
               <span class="title">косметика <br> и аксессуары
@@ -328,9 +335,10 @@
             </div>
           </div>
         </div>
+        </div>
       </div>
       <div class="stars-page desc">
-        <div class="scroll_container">
+        <div class="scroll_block">
           <div class="container">
           <div class="stars-page_content">
             <div class="stars_container">
