--- a/portfolio/Crystal/app/index.html
+++ b/portfolio/Crystal/app/index.html
@@ -89,7 +89,7 @@
                         <li><a class="link5" href="#">до/после</a></li>
                     </ul>
                 </div>
-                <div class="map">
+                <div class="map-section">
                     <div class="container">
                         <div class="title_section">
                             <span class="title"><span>crystal</span> maps</span>
