--- a/Shop/lc-page/app/compare.html
+++ b/Shop/lc-page/app/compare.html
@@ -1391,7 +1391,7 @@
               </div>
             </div>
           </div>
-          <div class="compare-content">
+          <div id="compare-content" class="compare-content">
             <div class="container">
               <div class="block_comparison">
                 <div class="modal_columns">
