--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -156,7 +156,7 @@
     </header>
     <!--Новый лендинг-->
     <div id="content" class="sticky-panel">
-      <link rel="stylesheet" type="text/css" href="http://localhost:3000/css/main.css">
+      <link rel="stylesheet" type="text/css" href="https://ruslanmmr.github.io/Shop/landing/app/css/main.css">
       <div class="top_section_heading">
         <div class="container">
           <div class="land_container catalog_container">
