--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -261,28 +261,307 @@
         <span class="balloons"></span>
       </div>
       <div id="how_it_works">
-          <div class="container">
-            <div class="land_container">
+        <div class="container">
+          <div class="land_container">
             <span class="how_title">Условия акции:</span>
             <div class="how_content">
               <p>При покупке сантехники в нашем интернет-магазине на сумму более 50 000 рублей <br>
-                 <strong>Вы получаете подарочный сертификат в магазин "Детский мир".</strong></p>
+                <strong>Вы получаете подарочный сертификат в магазин "Детский мир".</strong></p>
               <p>Данный сертификат дает право на покупку товаров для школы на сумму 3 000 рублей в розничной сети магазинов<br> "Детский мир". Полный перечень магазинов вы можете посмотреть на <a href="#">официальном сайте</a> сети.</p>
               <p>Срок проведения акцииc 15 по 31 августа.</p>
               <span class="sub">В акции участвуют все группы товаров</span>
             </div>
           </div>
-          </div>
+        </div>
       </div>
       <div class="last_screen_block">
         <div class="container">
           <div class="land_container">
+            <!--Секция1-->
             <div class="title"><span class="title_txt">Инсталляции</span></div>
             <div class="block_container">
-
+              <div class="block">
+                <a href="/geberit/sistema_installyacii_dlya_unitazov_geberit_duofix_delta_458_124_21_1_3_v_1_s_knopkoj_smyva/">
+                  <span class="img_block">
+                    <img src="/images/cms/thumbs/8fd5f709d6bbac954374186185ce129a4efebce2/installyacii_geberit_duofix_3_v_1_s_knopkoy_smyva_n0000018178_0_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Система инсталляции для унитазов Geberit Duofix Delta 458.124.21.1 3 в 1</span>
+                    <span class="price">
+                      <span class="old_price">13 500</span>
+                      <span class="current_price">8 350<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="/grohe/installyaciya_grohe_rapid_sl_38721001_3_v_1_s_knopkoj_smyva/">
+                  <span class="img_block">
+                    <img src="/images/cms/thumbs/4597ddcf2261fd917f17f8665b0012e8a374b2b6/installyacii_grohe_rapid_sl_3_v_1_s_knopkoy_smyva_n0000018209_0jpg_auto_800_5_92_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Система инсталляции для унитазов Grohe Rapid SL 38721001 3 в 1</span>
+                    <span class="price">
+                      <span class="old_price">13 478</span>
+                      <span class="current_price">13 280<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="/geberit/installyaciya_geberit_duofix_up320_111_300_00_5/">
+                  <span class="img_block">
+                    <img src="/images/cms/thumbs/e56ddc2c20a656747512c99fae8b7210a9ab02ae/installyacii_geberit_duofix_n0000018190_0jpg_auto_800_5_92_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Система инсталляции для унитазов Geberit Duofix UP320 111.300.00.5</span>
+                    <span class="price">
+                      <span class="current_price">12 000<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+            <!--Секция2-->
+            <div class="title"><span class="title_txt">Смесители</span></div>
+            <div class="block_container brand_container">
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/grohe.jpg" alt="Grohe">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                   <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/lemark.jpg" alt="Lemark">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+            <!--Секция3-->
+            <div class="title"><span class="title_txt">Унитазы</span></div>
+            <div class="block_container">
+              <div class="block">
+                <a href="/cersanit/unitaz-kompakt_cersanit_parva_new_clean_on_s_mikroliftom1/">
+                  <span class="img_block">
+                    <img src="/images/cms/thumbs/fce496ea094b5f6effaada67f2602d577ea33174/unitazy_cersanit_parva_s_mikroliftom_n0000096112_0jpg_auto_800_5_92_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Унитаз-компакт Cersanit Parva new clean on KO-PA011-3/6-COn-DL с микролифтом</span>
+                    <span class="price">
+                      <span class="old_price">7 499</span>
+                      <span class="current_price">4 970<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="/cersanit/unitaz_podvesnoj_cersanit_carina_new_clean_on/">
+                  <span class="img_block">
+                    <img src="/images/cms/thumbs/fce496ea094b5f6effaada67f2602d577ea33174/unitazy_cersanit_carina_n0000010397_0jpg_800_auto_5_92_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Унитаз подвесной Cersanit Carina new clean on P-MZ-CARINA-СOn-DL</span>
+                    <span class="price">
+                      <span class="old_price">6 599</span>
+                      <span class="current_price">4 699<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="/ceramalux/podvesnoj_unitaz_ceramalux_tr2196/">
+                  <span class="img_block horizontal">
+                    <img src="/images/cms/thumbs/97c8ff6711e4b10729d7c371ffccae93ba54214e/unitazy_ceramalux_n0000140309_0jpg_auto_auto_5_100.jpg" alt="">
+                  </span>
+                  <span class="title_block">
+                    <span class="name">Подвесной унитаз CeramaLux TR2196</span>
+                    <span class="price">
+                      <span class="old_price">14 300</span>
+                      <span class="current_price">10 800<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+            <!--Секция4-->
+            <div class="title"><span class="title_txt">Ванны</span></div>
+            <div class="block_container brand_container">
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="https://ruslanmmr.github.io/Shop/landing/app/img/astra-form.png" alt="astra-form">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                   <img src="/images/brands/excellent.jpg" alt="Excellent">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="https://ruslanmmr.github.io/Shop/landing/app/img/marmo-bagno-logo.jpg" alt="marmo-bagno">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+            <!--Секция5-->
+            <div class="title"><span class="title_txt">Стойки</span></div>
+            <div class="block_container brand_container">
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/adiante/adiante_logo.jpg" alt="Adiante">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                   <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="https://ruslanmmr.github.io/Shop/landing/app/img/bronze_delux.png" alt="bronze_delux">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+             <!--Секция6-->
+            <div class="title"><span class="title_txt">Аксессуары</span></div>
+            <div class="block_container brand_container">
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/fbs.jpg" alt="FBS">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                   <img src="/images/brands/artwelle.jpg" alt="Artwelle">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="https://ruslanmmr.github.io/Shop/landing/app/img/Wasserkraft.jpg" alt="Wasserkraft ">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -30%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
             </div>
           </div>
         </div>
+        <span class="decoration_balloons"></span>
+        <span class="decoration_bottom_ballons"></span>
       </div>
       <script>
       document.addEventListener('DOMContentLoaded', function() {
@@ -424,7 +703,7 @@
   <script type="text/javascript" src="/templates/satra/js/eskju.jquery.scrollflow.min.js"></script>
   <script type="text/javascript" src="/templates/satra/js/main.js?2"></script>
   <!--Timer script-->
-  <script type="text/javascript" src="http://localhost:3000/countdown.js"></script>
+  <script type="text/javascript" src="https://ruslanmmr.github.io/Shop/landing/app/countdown.js"></script>
   <script>
     $(document).ready(function(){
       setTimeout(function() {
