--- a/Shop/landing/app/index.html
+++ b/Shop/landing/app/index.html
@@ -241,16 +241,16 @@
               <div class="timer-area">
                 <ul id="countdown">
                   <li> <span class="days">00</span>
-                    <p class="timeRefDays">days</p>
+                    <p class="timeRefDays">Дни</p>
                   </li>
                   <li> <span class="hours">00</span>
-                    <p class="timeRefHours">hours</p>
+                    <p class="timeRefHours">Часы</p>
                   </li>
                   <li> <span class="minutes">00</span>
-                    <p class="timeRefMinutes">minutes</p>
+                    <p class="timeRefMinutes">Минуты</p>
                   </li>
                   <li> <span class="seconds">00</span>
-                    <p class="timeRefSeconds">seconds</p>
+                    <p class="timeRefSeconds">Секунды</p>
                   </li>
                 </ul>
               </div>
@@ -328,51 +328,6 @@
               </span>
             </div>
             <!--Секция2-->
-            <div class="title"><span class="title_txt">Смесители</span></div>
-            <div class="block_container brand_container">
-              <div class="block">
-                <a href="#">
-                  <span class="img_block">
-                    <img src="/images/brands/grohe.jpg" alt="Grohe">
-                  </span>
-                  <span class="title_block">
-                    <span class="price">
-                      <span class="current_price">ДО -20%</span>
-                    </span>
-                  </span>
-                </a>
-              </div>
-              <div class="block">
-                <a href="#">
-                  <span class="img_block">
-                   <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
-                  </span>
-                  <span class="title_block">
-                    <span class="price">
-                      <span class="current_price">ДО -20%</span>
-                    </span>
-                  </span>
-                </a>
-              </div>
-              <div class="block">
-                <a href="#">
-                  <span class="img_block">
-                    <img src="/images/brands/lemark.jpg" alt="Lemark">
-                  </span>
-                  <span class="title_block">
-                    <span class="price">
-                      <span class="current_price">ДО -20%</span>
-                    </span>
-                  </span>
-                </a>
-              </div>
-            </div>
-            <div class="block_button">
-              <span class="link">
-                <a href="#">смотреть все</a>
-              </span>
-            </div>
-            <!--Секция3-->
             <div class="title"><span class="title_txt">Унитазы</span></div>
             <div class="block_container">
               <div class="block">
@@ -405,14 +360,59 @@
               </div>
               <div class="block">
                 <a href="/ceramalux/podvesnoj_unitaz_ceramalux_tr2196/">
-                  <span class="img_block horizontal">
-                    <img src="/images/cms/thumbs/97c8ff6711e4b10729d7c371ffccae93ba54214e/unitazy_ceramalux_n0000140309_0jpg_auto_auto_5_100.jpg" alt="">
+                  <span class="img_block">
+                    <img src="https://ruslanmmr.github.io/Shop/landing/app/img/CERAMALUX.jpg" alt="CERAMALUX">
                   </span>
                   <span class="title_block">
                     <span class="name">Подвесной унитаз CeramaLux TR2196</span>
                     <span class="price">
                       <span class="old_price">14 300</span>
                       <span class="current_price">10 800<span class="rub">руб.</span></span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div class="block_button">
+              <span class="link">
+                <a href="#">смотреть все</a>
+              </span>
+            </div>
+            <!--Секция3-->
+            <div class="title"><span class="title_txt">Смесители</span></div>
+            <div class="block_container brand_container">
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/grohe.jpg" alt="Grohe">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="block">
+                <a href="#">
+                  <span class="img_block">
+                    <img src="/images/brands/lemark.jpg" alt="Lemark">
+                  </span>
+                  <span class="title_block">
+                    <span class="price">
+                      <span class="current_price">ДО -20%</span>
                     </span>
                   </span>
                 </a>
@@ -441,7 +441,7 @@
               <div class="block">
                 <a href="#">
                   <span class="img_block">
-                   <img src="/images/brands/excellent.jpg" alt="Excellent">
+                    <img src="/images/brands/excellent.jpg" alt="Excellent">
                   </span>
                   <span class="title_block">
                     <span class="price">
@@ -486,7 +486,7 @@
               <div class="block">
                 <a href="#">
                   <span class="img_block">
-                   <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
+                    <img src="/images/brands/hansgrohe.jpg" alt="Hansgrohe">
                   </span>
                   <span class="title_block">
                     <span class="price">
@@ -513,7 +513,7 @@
                 <a href="#">смотреть все</a>
               </span>
             </div>
-             <!--Секция6-->
+            <!--Секция6-->
             <div class="title"><span class="title_txt">Аксессуары</span></div>
             <div class="block_container brand_container">
               <div class="block">
@@ -531,7 +531,7 @@
               <div class="block">
                 <a href="#">
                   <span class="img_block">
-                   <img src="/images/brands/artwelle.jpg" alt="Artwelle">
+                    <img src="/images/brands/artwelle.jpg" alt="Artwelle">
                   </span>
                   <span class="title_block">
                     <span class="price">
